tests/negative/AppLeftImplicit.juvix
module AppLeftImplicit;

x (dummy : Type) : Type := {x dummy};
